# ivi-c-chm-cleaning

./: .gitignore  .ivi-chm-index.sqlite3  README.md  build_exe.ps1  pyproject.toml
.ivi-chm-index/: _MAIN_2.toc
.kilo/plans/: 1780666957792-misty-harbor.md  1781019370035-witty-rocket.md  1781020030526-cosmic-canyon.md  1781035740791-stellar-wizard.md  portable-sqlite-index-plan.md
.kilo/skills/ivi-chm/: SKILL.md
benchmarks/: ivi_docs_benchmark.json
data/extracted/Html/: Copyright.html  GettingStarted.html  InherentCapabilities.html  Installation.html  InstrumentSpecificCapabilities.html  Interchangeability.html  IviBackgrounder.html  IviCAccessingRepCaps.html  IviCCommandReference.html  IviCCpp.html  IviCDriver.html  IviCDriverReference.html  IviCEnvironments.html  IviCInitialize.html  IviCLabVIEW.html  IviCLabWindows.html  IviCMATLAB.html  IviCProgrammingBasics.html  IviCSource.html  IviCSourceBuildAndDeploy.html  IviCSourceFiles.html  IviCSpecificDriver.html  IviCUsingSimulation.html  IviCVBAExcel.html  IviCompliance.html  IviConfigStore.html  IviSharedComponents.html  IviWebForum.html  KTNA_ATTR_AFR_BAND_LIMITATION_ENABLED.html  KTNA_ATTR_AFR_CORRECTION_ENABLED.html  KTNA_ATTR_AFR_FIXTURE_DATA_PORT.html  (+2941 more)
src/ivi_c_chm_cleaning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ivi_chm/: __init__.py  benchmark.py  cli.py  indexer.py  parser.py
tests/: _support.py  conftest.py  test_benchmark.py  test_cli_search.py  test_parser_contract.py  test_search_metrics.py  test_search_quality.py
tests/fixtures/: lookup_cases.json
(+3 files in other folders)
