[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivi-c-chm-cleaning"
version = "0.1.0"
description = "Parse and search extracted Keysight IVI-C CHM HTML documentation."
requires-python = ">=3.12"

[project.scripts]
ivi-chm = "ivi_chm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
