[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivi-c-chm-cleaning"
version = "0.1.0"
description = "Parse and search extracted Keysight IVI-C CHM HTML documentation."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "Whoosh>=2.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
ivi-chm = "ivi_chm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
